styling for hover on home page

--- a/public/partials/details/reddit-firebase-angular.html
+++ b/public/partials/details/reddit-firebase-angular.html
@@ -1,4 +1,4 @@
-<h3 class="reddit">Reddit Firebase Angular Web Application</h3>
+<h3 class="shopping">Reddit Firebase Angular Web Application</h3>
 
 <section>
 <div class="container">
