--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,31 +185,34 @@ hr {
   background: #2d2b2b;
   top: 300px; }
 
-  .project img {
-    
+  #project-box {
+    display: block;
   }
+
+  /* #project-box:hover {
+    background-color: rgba(245,245,220, 0.9);
+  } */
 
 img {
   transition: 300ms ease all;
   /* margin-left: 50px; */
   width: 80%;
-  float: left; }
+  /* float: left;  */
+}
 
 img:after {
   content: "";
   display: table;
   clear: both; }
 
-.project .mask {
+/* .project .mask {
   position: absolute;
   overflow: hidden;
   top: 20px;
-  left: 50px;
   margin-top: -20px;
-  width: 80%;
   max-height: 98%;
   min-height: 90%;
-}
+} */
 
 .padding-top20 {
   padding-top: 20px;
@@ -219,9 +222,59 @@ img:after {
   background-color: rgba(245,245,220, 0.9);
   overflow: hidden;
 }
-.project .img {
-    display: block;
-    position: relative
+.project img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -165px;
+    margin-left: -260px;
+}
+
+.project-inside {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  min-height: 345px;
+}
+
+.project-inside:hover {
+  transition: all 0.8s ease;
+  /* background: rgba(0, 0, 0, 0.6); */
+  opacity: 1;
+  padding: 20px;
+  min-height: 345px;
+  background-color: rgba(245,245,220, 0.9);
+}
+
+.project-inside:hover:after {
+  /* width: 100%; */
+  content: "";
+  height: 100%; 
+  left: 0; 
+  top: 0; 
+  width: 0px;  
+  position: absolute; 
+  transition: all 0.3s ease 0s; 
+  -webkit-transition: all 0.3s ease 0s; 
+  z-index: -1;
+}
+
+#project-box:hover .project-inside:hover {
+  /* display: block; */
+  opacity: 1;
+}
+
+#project-box .project-img {
+  /* border: 3px solid orangered; */
+  /* display: block;
+  opacity: 1; */
+}
+
+#project-box .project-img:hover {
+  /* border: 3px solid yellow; */
+  /* display: none;
+  opacity: 0; */
 }
 .project h2 {
     text-transform: uppercase;
@@ -237,8 +290,8 @@ img:after {
     font-style: italic;
     font-size: 1.1em;
     position: relative;
-    padding: 0 20px 0 20px;
-    text-align: center;
+    padding: 20px 0 20px;
+    text-align: left;
     overflow: hidden;
 }
 
@@ -265,7 +318,8 @@ img:after {
     box-shadow: 0 0 1px #000
 }
 .project a.href:hover {
-    box-shadow: 0 0 5px #000
+    box-shadow: 0 0 5px #000;
+    border: 1px solid green;
 }
 .view-first .img {
     transition: all 0.2s linear;
@@ -276,23 +330,25 @@ img:after {
     transition: all 0.4s ease-in-out;
 }
 .view-first h2 {
-    transform: translateY(-300px);
+    /* transform: translateY(-300px); */
     opacity: 0;
     transition: all 0.4s ease-in-out;
 }
 .view-first p {
-  transform: translateX(-300px);
+  /* transform: translateX(-300px); */
   opacity: 0;
   transition: all 0.4s linear;
+  text-align: left;
 }
 .view-first .href {
-  transform: translateX(300px);
+  /* transform: translateX(300px); */
   opacity: 0;
   transition: all 0.4s ease-in-out;
 }
 .view-first:hover img {
 	transform: scale(1);
-      width: 80%;
+  width: 80%;
+  display: none;
 }
 .view-first:hover .mask {
 	opacity: 1;
@@ -309,6 +365,7 @@ img:after {
 }
 .view-first:hover .href {
     transition-delay: 0.2s;
+    padding-bottom: 20px;
 }
 .view-first:hover h2 {
     transition-delay: 0.2s;
@@ -356,23 +413,30 @@ img:after {
 
 .project {
   background: rgba(0,0,0,.7);
-  float: left;
-  width: 50%;
+  /* border: 1px solid aliceblue; */
   position: relative;
-  padding: 45px;
+  padding: 20px;
   border-top: 1px solid rgba(255,255,255,0.3);
   border-bottom: 1px solid rgba(0,0,0,0.1);
+  overflow: hidden;
+  min-height: 325px;
+  margin-bottom: 20px;
 }
+
+/* .project:hov {
+  display: block;
+} */
+
 .project2 {
   float: none;
   margin: 0 auto;
 }
 
-.project:after {
+/* .project:after {
   content: "";
   display: table;
   clear: both;
-}
+} */
 
 .fa {
   font-size: 1.5em;
@@ -426,8 +490,9 @@ a:after {
   text-shadow: 1px 1px 2px white;
   font-size: 1.6em; }
 
-.container {
-  margin: 0 auto;
+.container100 {
+  /* width: 100%; */
+  background: rgba(0,0,0,.7);
 }
 
 section.module:last-child {
@@ -545,6 +610,10 @@ header nav {
 	padding: 20px 50px;
 }
 
+#navbar img {
+  margin-left: 20px;
+}
+
 #navbar.smaller {
   background-color: rgba(255,255,255,.7);
 }
@@ -636,6 +705,14 @@ ul.show {
   display: block;
 }
 
+#project-box img {
+  /* display: block; */
+  background: #fff;
+}
+#project-box .image, .project-inside .image {
+  display: block;
+}
+
 span {
   color: #af0a0a;
 }
@@ -715,15 +792,15 @@ body {
   line-height: 1.45;
   color: #333; }
 
-article a {
+/* article a {
   padding: 5px;
-  line-height: 1em; }
+  line-height: 1em; } */
 
-article {
+/* article {
   width: 100%;
   display: block;
   float: left;
-  height: 25px; }
+  height: 25px; } */
 
 p:after {
   content: "";
@@ -734,9 +811,17 @@ p:hover {
   color: #114fe0;
 }
 
+.mask2 ul {
+  padding-top: 20px;
+}
+
 .mask2 ul li {
   font-size: 1.1em;
   width: 100%;
+}
+
+.mask2 p {
+  padding: 20px;
 }
 h1, h2, h3, h4 {
   font-weight: inherit;
@@ -774,7 +859,8 @@ h3 {
   margin: 20px auto;
 }
 .shopping {
-  width: 30%;
+  width: 100%;
+  color: #fff;
 }
 .reddit {
   width: 35%;
@@ -1194,12 +1280,16 @@ table {
   .small {
     display: none;
   }
-  .project {
-    min-height: 455px;
+  .col-xs-12 .project img {
+    /* min-height: 455px; */
+    margin-left: -350px;
   }
-  .project mask5 {
+  .col-md-6 .project img {
+    margin-left: -220px;
+  }
+  /* .project mask5 {
     height: 100%;
-  }
+  } */
 
   .project h2 {
     font-size: 18px;
@@ -1245,22 +1335,30 @@ table {
   .center-box2 {
     width: 70%;
   }
+
+  .col-xs-12 .project img {
+    margin-top: -165px;
+    margin-left: 100px;
+    left: 0;
+    margin-left: 75px;
+  }
 }
 
 @media(Max-width:900px) and (min-width:600px){
   .resize { border: none; }
   .project {
-    width: 100%;
     min-height: 200px;
     padding-bottom: 80px;
   }
-  .project .mask {
+  .project img {
+    margin-left: 75px;
+  }
+  /* .project .mask {
     min-height: 100%;
     margin-left: 10%;
-    width: 75%;
     max-height: 98%;
     min-height: 80%;
-  }
+  } */
   .project h2 {
     font-size: 18px;
   }
@@ -1308,7 +1406,7 @@ table {
     padding-bottom: 0px;
   }
   .project {
-    width: 100%;
+    /* width: 100%; */
     min-height: 200px;
     padding-bottom: 150px;
     min-height: 455px;
@@ -1375,7 +1473,7 @@ table {
     font-size: 25px;
   }
 
-  .hide {
+  .hiding {
     display: none;
   }
 
