styling designs pages

--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -3,7 +3,7 @@
               </section>
               
                 <section class="module content">
-                   <div class="container">
+                   <div class="container100">
                      <div id="designs" class="project view-first" ng-repeat="design in designs">
                        <img class="img" src="/images/{{design.image}}.png" alt="">
                        <div class="mask">
