--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -362,6 +362,10 @@ img:after {
 }
 .view-first:hover p {
     transition-delay: 0.1s;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 0px;
+    padding-right: 0px;
 }
 .view-first:hover .href {
     transition-delay: 0.2s;
@@ -1258,6 +1262,11 @@ table {
   #designs {
     min-height: 300px;
   }
+
+  #designs img {
+    margin-left: -450px;
+    margin-top: -100px;
+  }
   #navbar {
     display: flex;
     justify-content: flex-end;
@@ -1309,6 +1318,10 @@ table {
     justify-content: flex-end;
   }
 
+  #designs img {
+    margin-left: -350px;
+  }
+
   .center-box2 {
     width: 50%;
   }
@@ -1341,6 +1354,10 @@ table {
     margin-left: 100px;
     left: 0;
     margin-left: 75px;
+  }
+
+  #designs img {
+    margin-left: -275px;
   }
 }
 
@@ -1395,6 +1412,10 @@ table {
 
   .center-box2 {
     width: 70%;
+  }
+
+  #designs img {
+    margin-left: -280px;
   }
 }
 
@@ -1461,9 +1482,9 @@ table {
   .shopping {
     width: 80%;
   }
-  .reddit {
+  /* .reddit {
     width: 90%;
-  }
+  } */
   #hamburger {
     display: block;
     right: 20px;
@@ -1485,7 +1506,6 @@ table {
     width: 100%;
   }
 
-  /* .center-box2.img {
-    padding-left: 0;
-  } */
+  #designs img {
+    margin-left: -175px;  }
 }
