--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1280,11 +1280,11 @@ table {
   }
   .col-xs-12 .project img {
     /* min-height: 455px; */
-    margin-left: -350px;
+    /* margin-left: -350px; */
   }
-  .col-md-6 .project img {
+  /* .col-md-6 .project img {
     margin-left: -220px;
-  }
+  } */
   /* .project mask5 {
     height: 100%;
   } */
