--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -120,6 +120,7 @@
          <!-- </div> -->
        <!-- </div> -->
 
+       <div class="row">
        <div ng-repeat="project in projects">
           <div class="col-xs-12 col-md-6 col-lg-6"> 
             
@@ -139,6 +140,7 @@
            </div>
        </div>
      </div>
+    </div>
 
      <!-- <div class="container100"> -->
         
