--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
+
+
 *, *:before, *:after {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -1280,7 +1282,7 @@ table {
   }
   .col-xs-12 .project img {
     /* min-height: 455px; */
-    /* margin-left: -350px; */
+    margin-left: -180px;
   }
   /* .col-md-6 .project img {
     margin-left: -220px;
