styling with bootstrap4

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -99,30 +99,9 @@
 </section>
 
   <section class="module content">
-     <!-- <div class="container100">
-       <div class="project row view-first">
-          <div class="col-xs-12 col-md-6 col-lg-6">
-            <img class="img" src="/images/publications.png" alt="">
-       
-            <h2>publications-angular</h2>
-            <p>Type: Galvanize Final Assessment</p> -->
-              <!-- <p class="desc">Description: The front-end is written using Angular, Node Express
-              and includes Restful Routes.  This app was a final exam for the Galvanize program
-              and an exercise in writing code, without copying code for an 8 hour time frame.
-              The Angular front-end side was deployed with Firebase and the backend Node side was
-              deployed with Heroku.</p> -->
-            <!-- <div class="href">
-                <a target="_blank" ng-href="https://fierce-dusk-42290.herokuapp.com/api/publications"><i class="fa fa-newspaper-o"> </i>&nbsp;publications-api&nbsp;<strong class="black">Click on this one first!</strong></a>
-                <a ng-href="https://publications-angular.firebaseapp.com/#/"><i class="fa fa-hacker-news"></i>&nbsp;publications-angular&nbsp;<strong class="black">Both apps need to be clicked to work!</strong></a>
-                <a ng-href="https://github.com/hillaryskye/publications-api" target="_blank"><i class="fa fa-github"></i>&nbsp; github: publications-api</a>
-                <a ng-href="https://github.com/hillaryskye/publications-angular" target="_blank"><i class="fa fa-github"></i>&nbsp; github: publications-angular</a>
-            </div> -->
-         <!-- </div> -->
-       <!-- </div> -->
-
        <div class="row">
-       <div ng-repeat="project in projects">
-          <div class="col-xs-12 col-md-6 col-lg-6"> 
+       <div class="col-xs-12 col-md-6 col-lg-6" ng-repeat="project in projects">
+          <!-- <div class="col-xs-12 col-md-6 col-lg-6">  -->
             
               <div id="project-box" class="project">
                   <img class="project-img" src="/images/{{project.name}}.png" alt="">
@@ -137,12 +116,10 @@
                   </div>
               </div>
               
-           </div>
-       </div>
-     </div>
+           <!-- </div> -->
+      
+     <!-- </div> -->
     </div>
-
-     <!-- <div class="container100"> -->
         
            <div class="col-xs-12 col-md-6 col-lg-6">
              <div id="project-box2" class="project">
@@ -163,7 +140,7 @@
                   </div>
               </div>
           </div>
-        <!-- </div> -->
+        </div>
  </section>
 
  <main>
