--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,3 @@
-
-
 *, *:before, *:after {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -77,6 +75,10 @@ main {
   margin: 0 auto;
   width: 100%;
   float: left;
+}
+
+.row {
+  background: rgba(0,0,0,.7);
 }
 
 .left {
@@ -187,34 +189,14 @@ hr {
   background: #2d2b2b;
   top: 300px; }
 
-  #project-box {
-    display: block;
-  }
-
-  /* #project-box:hover {
-    background-color: rgba(245,245,220, 0.9);
-  } */
-
 img {
   transition: 300ms ease all;
-  /* margin-left: 50px; */
-  width: 80%;
-  /* float: left;  */
 }
 
 img:after {
   content: "";
   display: table;
   clear: both; }
-
-/* .project .mask {
-  position: absolute;
-  overflow: hidden;
-  top: 20px;
-  margin-top: -20px;
-  max-height: 98%;
-  min-height: 90%;
-} */
 
 .padding-top20 {
   padding-top: 20px;
@@ -225,32 +207,24 @@ img:after {
   overflow: hidden;
 }
 .project img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -165px;
-    margin-left: -260px;
+     position: absolute;
 }
 
 .project-inside {
   position: relative;
-  display: flex;
-  flex-direction: column;
   opacity: 0;
-  min-height: 345px;
+  min-height: 400px;
 }
 
 .project-inside:hover {
   transition: all 0.8s ease;
-  /* background: rgba(0, 0, 0, 0.6); */
   opacity: 1;
   padding: 20px;
-  min-height: 345px;
+  min-height: 400px;
   background-color: rgba(245,245,220, 0.9);
 }
 
 .project-inside:hover:after {
-  /* width: 100%; */
   content: "";
   height: 100%; 
   left: 0; 
@@ -263,7 +237,6 @@ img:after {
 }
 
 #project-box:hover .project-inside:hover {
-  /* display: block; */
   opacity: 1;
 }
 
@@ -310,7 +283,6 @@ img:after {
 }
 .project a.href:hover {
     box-shadow: 0 0 5px #000;
-    border: 1px solid green;
 }
 .view-first .img {
     transition: all 0.2s linear;
@@ -376,7 +348,6 @@ img:after {
 }
 .center-box2 {
   float: none;
-  /* width: 50%; */
   padding-bottom: 20px;
 }
 
@@ -387,7 +358,6 @@ img:after {
 
 #center-box3 {
   left: 0;
-  /* width: 85%; */
   margin: auto;
 }
 
@@ -407,31 +377,16 @@ img:after {
 }
 
 .project {
-  background: rgba(0,0,0,.7);
-  /* border: 1px solid aliceblue; */
   position: relative;
-  padding: 20px;
   border-top: 1px solid rgba(255,255,255,0.3);
   border-bottom: 1px solid rgba(0,0,0,0.1);
   overflow: hidden;
-  min-height: 325px;
-  margin-bottom: 20px;
 }
-
-/* .project:hov {
-  display: block;
-} */
 
 .project2 {
   float: none;
   margin: 0 auto;
 }
-
-/* .project:after {
-  content: "";
-  display: table;
-  clear: both;
-} */
 
 .fa {
   font-size: 1.5em;
@@ -649,7 +604,6 @@ header nav {
     top:0;
     left:200px; /* make this equal to the width of the sub nav above */
     margin:0;
-    border: 3px solid yellow;
 }
 
 /* style all links */
@@ -701,11 +655,24 @@ ul.show {
 }
 
 #project-box img {
-  /* display: block; */
-  background: #fff;
+  display: block;
+  width: 100%;
+  padding: 20px;
 }
+
 #project-box .image, .project-inside .image {
   display: block;
+}
+
+#project-box2 {
+  display: block;
+}
+#project-box2 .project-img {
+  width: 100%;
+  padding: 20px;}
+
+#project-box2 .project-inside:hover {
+  width: 100%;
 }
 
 span {
@@ -786,16 +753,6 @@ body {
   font-weight: 400;
   line-height: 1.45;
   color: #333; }
-
-/* article a {
-  padding: 5px;
-  line-height: 1em; } */
-
-/* article {
-  width: 100%;
-  display: block;
-  float: left;
-  height: 25px; } */
 
 p:after {
   content: "";
@@ -896,7 +853,8 @@ a:after {
 a:hover, button:hover {
   color: #fff;
   background: #114fe0;
-  background: rgba(0,53,131, .8); }
+  background: rgba(0,53,131, .8);
+  text-decoration: none; }
 
 .center {
   text-align: center; }
@@ -1280,16 +1238,6 @@ table {
   .small {
     display: none;
   }
-  .col-xs-12 .project img {
-    /* min-height: 455px; */
-    margin-left: -180px;
-  }
-  /* .col-md-6 .project img {
-    margin-left: -220px;
-  } */
-  /* .project mask5 {
-    height: 100%;
-  } */
 
   .project h2 {
     font-size: 18px;
@@ -1340,13 +1288,6 @@ table {
     width: 70%;
   }
 
-  .col-xs-12 .project img {
-    margin-top: -165px;
-    margin-left: 100px;
-    left: 0;
-    margin-left: 75px;
-  }
-
   #designs img {
     margin-left: -275px;
   }
@@ -1354,19 +1295,7 @@ table {
 
 @media(Max-width:900px) and (min-width:600px){
   .resize { border: none; }
-  .project {
-    min-height: 200px;
-    padding-bottom: 80px;
-  }
-  .project img {
-    margin-left: 75px;
-  }
-  /* .project .mask {
-    min-height: 100%;
-    margin-left: 10%;
-    max-height: 98%;
-    min-height: 80%;
-  } */
+
   .project h2 {
     font-size: 18px;
   }
@@ -1417,16 +1346,6 @@ table {
     padding-top: 0px;
     padding-bottom: 0px;
   }
-  .project {
-    /* width: 100%; */
-    min-height: 200px;
-    padding-bottom: 150px;
-    min-height: 455px;
-  }
-  .project mask {
-    min-height: 80%;
-    max-height: 98%;
-  }
 
   #navbar {
     justify-content: flex-start;
@@ -1473,9 +1392,7 @@ table {
   .shopping {
     width: 80%;
   }
-  /* .reddit {
-    width: 90%;
-  } */
+
   #hamburger {
     display: block;
     right: 20px;
