added styling for home page for clicking on hamburger and nav height changes for mobile

--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,5 +1,5 @@
 <main>
-        <div class="container">
+        <div ng-class="{contents: hiding}" class="container">
             <div id="center-box" class="project">
               <div class="mask2">
                 <h2>Junior Front End UI/ UX Web Developer</h2>
