--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,5 +1,5 @@
 <main>
-  <footer class="footer">
+  <footer ng-class="{contents: hiding}" class="footer module content">
       <li>Hillary Shannon Skye</li>
       <li>720-218-6389</li>
       <li>skyeinc9@gmail.com</li>
