--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -1,4 +1,4 @@
-          <section id="startchange" class="module parallax parallax-1">
+          <section ng-class="{contents: hiding}" id="startchange" class="module parallax parallax-1">
                 <div class="container"></div>
               </section>
               
