--- a/public/partials/designs/portfolioLogo2.html
+++ b/public/partials/designs/portfolioLogo2.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <div class="center-box4"><img class="center-box2" src="/images/portfolioLogo22.png" alt=""></div>
 
 <section>
@@ -17,3 +18,4 @@
     </div>
 </div>
 </section>
+</main>
