--- a/public/partials/designs/wireframe3.html
+++ b/public/partials/designs/wireframe3.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <div class="center-box4"><img class="center-box2" src="/images/wireframe31.png" alt=""></div>
 <section>
 <div class="container">
@@ -14,3 +15,4 @@
     </div>
 </div>
 </section>
+</main>
