--- a/public/partials/details/publications.html
+++ b/public/partials/details/publications.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <h3 class="shopping">Publication Web Application</h3>
 
 <section>
@@ -41,3 +42,4 @@
     </div>
 </div>
 </section>
+</main>
