--- a/public/partials/details/shopping-angular.html
+++ b/public/partials/details/shopping-angular.html
@@ -1,7 +1,8 @@
+<main ng-class="{contents: hiding}">
 <h3 class="shopping">Shopping Angular Web Application</h3>
 
 <section>
-<div class="container">
+<div ng-class="{contents: hiding}" class="container">
     <div class="project">
       <div class="mask2">
         <h2>Shopping Angular - Technologies Used</h2>
@@ -36,3 +37,4 @@
     </div>
 </div>
 </section>
+</main>
