--- a/public/partials/details/tuneset_old.html
+++ b/public/partials/details/tuneset_old.html
@@ -1,7 +1,8 @@
+<main ng-class="{contents: hiding}">
 <h3>Tuneset Web Application</h3>
 
 <section>
-<div class="container">
+<div ng-class="{contents: hiding}" class="container">
     <div class="project">
       <div class="mask2 mask4">
         <h2>Tuneset Web Application - Technologies Used</h2>
@@ -43,3 +44,4 @@
     </div>
 </div>
 </section>
+</main>
