--- a/public/partials/designs/portfolioLogo1.html
+++ b/public/partials/designs/portfolioLogo1.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <div class="center-box4"><img class="center-box2" src="/images/portfolioLogo12.png" alt=""></div>
 <section>
 <div class="container">
@@ -15,3 +16,4 @@
     </div>
 </div>
 </section>
+</main>
