--- a/public/partials/details/mixer.html
+++ b/public/partials/details/mixer.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <h3 class="shopping">Mixer Web Application</h3>
 
 <section>
@@ -42,3 +43,4 @@
     </div>
 </div>
 </section>
+</main>
