--- a/public/partials/details/reddit-firebase-angular.html
+++ b/public/partials/details/reddit-firebase-angular.html
@@ -1,3 +1,4 @@
+<main ng-class="{contents: hiding}">
 <h3 class="shopping">Reddit Firebase Angular Web Application</h3>
 
 <section>
@@ -39,3 +40,4 @@
     </div>
 </div>
 </section>
+</main>
