--- a/public/partials/skills.html
+++ b/public/partials/skills.html
@@ -1,5 +1,5 @@
 <section>
-<div class="container">
+<div ng-class="{contents: hiding}" class="container">
     <div class="project">
       <div class="mask2">
         <h2>Full Stack Web Development</h2>
