--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -53,7 +53,7 @@
           <!-- <div class="col-xs-12 col-md-6 col-lg-6">  -->
             
               <div id="project-box" class="project">
-                  <img class="project-img" src="/images/{{project.name}}.png" alt="">
+                  <img class="project-img" src="/images/{{project.name}}.jpg" alt="">
                   <div class="project-inside">
                   <h2>{{project.name}}</h2>
                   <!-- <p>Type: {{project.type}}</p> -->
@@ -72,7 +72,7 @@
         
            <div class="col-xs-12 col-md-6 col-lg-6">
              <div id="project-box2" class="project">
-                <img class="project-img" src="/images/publications.png" alt="">
+                <img class="project-img" src="/images/publications_opt_sm.jpg" alt="">
                 <div class="project-inside">
                     <h2>publications-angular</h2>
                     <!-- <p>Type: Galvanize Final Assessment</p> -->
