--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -6,7 +6,7 @@
                    <div class="row">
                      <div id="designs" class="col-xs-8 col-md-8 col-lg-8 ng-scope" ng-repeat="design in designs">
                         <div id="design-box" class="project">
-                      <img class="img" src="/images/{{design.image}}.png" alt="">
+                      <img class="img" src="/images/{{design.image}}.jpg" alt="">
                        <div class="design-inside">
                          <h2>{{design.name}}</h2>
                          <p>Type: {{design.type}}</p>
