--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -53,7 +53,7 @@
           <!-- <div class="col-xs-12 col-md-6 col-lg-6">  -->
             
               <div id="project-box" class="project">
-                  <img class="project-img" src="/images/{{project.name}}.jpg" alt="">
+                  <img class="project-img" src="/images/{{project.image}}" alt="">
                   <div class="project-inside">
                   <h2>{{project.name}}</h2>
                   <!-- <p>Type: {{project.type}}</p> -->
